@startuml
title SmartDress - Class Diagram

skinparam classAttributeIconSize 0
left to right direction

' =========================
' CORE USER SYSTEM
' =========================
class Utilisateur {
  +Integer id
  +String nom
  +String email
  +String motDePasse
  +String initiales
  +StatutUtilisateur statut
  +DateTime created_at
  +DateTime updated_at

  +creerCompte()
  +seConnecter()
  +seDeconnecter()
  +modifierProfil()
  +gererFavoris()
}

class Administrateur {
  +gererUtilisateurs()
  +consulterStatistiques()
  +modererContenu()
}

Administrateur --|> Utilisateur

' =========================
' RBAC SYSTEM
' =========================
class Role {
  +Integer id
  +String nom
  +String guard_name
  +DateTime created_at
  +DateTime updated_at
}

class Permission {
  +Integer id
  +String nom
  +String guard_name
  +DateTime created_at
  +DateTime updated_at
}

Utilisateur "1" -- "0..*" Role : possède
Role "*" -- "*" Permission : accorde

' =========================
' ACTIVITY LOG
' =========================
class Activite {
  +Integer id
  +String action
  +DateTime horodatage
}

Utilisateur "1" -- "0..*" Activite : génère

' =========================
' FAVORITES
' =========================
class Favoris {
  +Integer id
  +String style
  +String couleurFavoris
  +String saisonFavoris
}

Utilisateur "1" -- "0..*" Favoris : configure

' =========================
' CLOTHING MANAGEMENT
' =========================
class Vetement {
  +Integer id
  +String nom
  +CategorieVetement categorie
  +String couleur
  +String imageUrl

  +ajouterVetement()
  +modifierVetement()
  +supprimerVetement()
  +consulterVetement()
}

Utilisateur "1" -- "0..*" Vetement : possède

class Photo {
  +Integer id
  +String url
  +DateTime dateUpload
}

Vetement "1" -- "0..*" Photo : contient

' =========================
' OUTFIT
' =========================
class Tenue {
  +Integer id
  +String nom
  +DateTime dateCreation
  +DateTime datePlanifiee
}

Utilisateur "1" -- "0..*" Tenue : crée
Tenue "1" -- "1..*" Vetement : composée_de

' =========================
' WEATHER SERVICE
' =========================
class MeteoService {
  +verifierMeteo()
}

Tenue ..> MeteoService : utilise

' =========================
' SUGGESTION SERVICE (AI LOGIC)
' =========================
class SuggestionService {
  +genererSuggestion()
  +analyserFavoris()
}

SuggestionService ..> Favoris
SuggestionService ..> MeteoService
SuggestionService ..> Vetement

' =========================
' ADMIN STATISTICS
' =========================
class Statistique {
  +genererRapport()
}

Administrateur --> Statistique : consulte
@enduml